Added headers and navigation

--- a/cityImage.html
+++ b/cityImage.html
@@ -9,6 +9,6 @@
     <h1>
         My Favorite City
     </h1>
-    <a href="www.nattyjeje.com">Click to watch my favorite city</a>  
+    <a href="https://nattyjeje.com">Click to watch my favorite city</a>  
 </body>
 </html>
