--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>
         My Favorite City
     </h1>
-    <a href="www.nattyjeje.com">Click to watch my favorite city</a>
+    <a href="https://nattyjeje.com">Click to watch my favorite city</a>
     
 </body>
 </html>
