Flushed out city images page

--- a/cityImage.html
+++ b/cityImage.html
@@ -10,5 +10,11 @@
         My Favorite City
     </h1>
     <a href="https://nattyjeje.com">Click to watch my favorite city</a>  
+<div style="display: flexbox;">
+    <img src="./images/masthead-1170x550.jpg">
+    <img src="./images/gardens-by-the-bay-singapore-aerial-view-1576022334.jpg">
+    <img src="./images/masthead-1170x550.jpg">
+    <img src="./images/SG-Most-Beautiful-In-Asia_1920x1080_lead.jpg">
+</div>
 </body>
 </html>
