--- a/cityImage.html
+++ b/cityImage.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favorite City</title>
 </head>
+
 <body>
     <h1>
         My Favorite City
     </h1>
-    <a href="https://nattyjeje.com">Click to watch my favorite city</a>  
-<div style="display: flexbox;">
-    <img src="./images/masthead-1170x550.jpg">
-    <img src="./images/gardens-by-the-bay-singapore-aerial-view-1576022334.jpg">
-    <img src="./images/masthead-1170x550.jpg">
-    <img src="./images/SG-Most-Beautiful-In-Asia_1920x1080_lead.jpg">
-</div>
+    <a href="index.html">Home</a> <br>
+    <a href="https://nattyjeje.com">Click to watch my favorite city</a>
+    <div style="display: flexbox;">
+        <img src="./images/masthead-1170x550.jpg">
+        <img src="./images/gardens-by-the-bay-singapore-aerial-view-1576022334.jpg">
+        <img src="./images/masthead-1170x550.jpg">
+        <img src="./images/SG-Most-Beautiful-In-Asia_1920x1080_lead.jpg">
+    </div>
 </body>
+
 </html>
