Removed the css styles

--- a/cityImage.html
+++ b/cityImage.html
@@ -14,11 +14,10 @@
     <a href="index.html">Home</a> <br>
     <a href="https://nattyjeje.com">Click to watch my favorite city</a>
     <div style="display: flexbox;">
-        <img src="./images/masthead-1170x550.jpg">
-        <img src="./images/gardens-by-the-bay-singapore-aerial-view-1576022334.jpg">
-        <img src="./images/masthead-1170x550.jpg">
-        <img src="./images/SG-Most-Beautiful-In-Asia_1920x1080_lead.jpg">
+        <img src="./images/1000_F_292427964_dgQILDdhYSBtLS6wYFGW9tzTlgGjP87s.jpg">
+        <img src="./images/360_F_270994694_r5BrCnkytECR3UfUouPSfKmeMEu3Cqct.jpg">
+        <img src="./images/360_F_283839302_yt6JIsE96Pj4PydFDcBNKDUnuSpYB9h0.jpg">
+        <img src="./images/depositphotos_116629204-stock-photo-singapore-city-skyline-of-business.png">
     </div>
 </body>
-
 </html>
