Added border to the table

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favorite City</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/css/css_font_websafe.asp">
 </head>
 
 <body>
@@ -31,17 +32,16 @@
         </P>
 
         <h2>City Leaders</h2>
-        <table>
+        <table class="table">
             <tr>
                 <th>Name</th>
                 <th>Email</th>
                 <th>Phone</th>
             </tr>
             <tr>
-                <td>Natnael</td>
-                <td>n@city.com</td>
+                <td>Natnael Wale</td>
+                <td>natnael@bestcity.com</td>
                 <td>(123)-345-6789</td>
-
             </tr>
         </table>
     </main>
